Updates HTML language and adjusts login test to use submit button

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ html_lang }}">
 {% include "global/partials/head.html" %}
 <body>
     {% include "global/partials/header.html" %}
