Add post like functionality with backend logic and UI updates

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,9 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="{{ html_lang }}">
-{% include "global/partials/head.html" %}
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="csrf-token" content="{{ csrf_token }}">
+        <title>Social Connect </title>
+        <link rel="stylesheet" href="{% static "global/css/styles.css" %}">
+    </head>
 <body>
     {% include "global/partials/header.html" %}
     {% block content %}{% endblock content %}
-    {% include "global/partials/footer.html" %}
+    <footer>
+        <p>&copy; rafaelrodrigues-dev</p>
+    </footer>
+    <script src="{% static "global/js/script.js" %}"></script>
 </body>
 </html>
