--- a/app/base_templates/global/base.html
+++ b/app/base_templates/global/base.html
@@ -7,13 +7,12 @@
         <meta name="csrf-token" content="{{ csrf_token }}">
         <title>Social Connect </title>
         <link rel="stylesheet" href="{% static "global/css/styles.css" %}">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
     </head>
 <body>
     {% include "global/partials/header.html" %}
+    {% include "global/partials/search.html" %}
     {% block content %}{% endblock content %}
-    <footer>
-        <p>&copy; rafaelrodrigues-dev</p>
-    </footer>
     <script src="{% static "global/js/script.js" %}"></script>
 </body>
 </html>
