--- a/app/base_templates/global/base.html
+++ b/app/base_templates/global/base.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="csrf-token" content="{{ csrf_token }}">
-        <title>Social Connect </title>
+        <title>Socialnet</title>
         <link rel="stylesheet" href="{% static "global/css/styles.css" %}">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
     </head>
