--- a/app/base_templates/global/base.html
+++ b/app/base_templates/global/base.html
@@ -7,7 +7,7 @@
         <meta name="csrf-token" content="{{ csrf_token }}">
         <title>Socialnet</title>
         <link rel="stylesheet" href="{% static "global/css/styles.css" %}">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
 <body>
     {% include "global/partials/header.html" %}
