--- a/app/base_templates/global/base.html
+++ b/app/base_templates/global/base.html
@@ -1,29 +1,42 @@
 {% load static %}
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="{{ html_lang }}">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="csrf-token" content="{{ csrf_token }}">
-        <title>Socialnet</title>
-        <link rel="stylesheet" href="{% static "global/css/styles.css" %}">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<head>
+		<title>Socialnet</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+                <meta name="csrf-token" content="{{ csrf_token }}">
+		<link rel="stylesheet" href="{% static "global/css/main.css" %}" />
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5530029456930361"
-     crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
         <link rel="manifest" href="/static/manifest.json">
-    </head>
-<body>
-    {% include "global/partials/header.html" %}
-        {% include "global/partials/navrail.html" %}
-        <div class="main-content">
-            {% include "global/partials/search.html" %}
-            {% block content %}{% endblock content %}
-        </div>
-    <script src="{% static "global/js/script.js" %}"></script>
-    <script>
-        if (typeof navigator.serviceWorker !== 'undefined') {
-            navigator.serviceWorker.register('{% static "global/js/sw.js" %}')
-        }
-    </script>
-</body>
+	</head>
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					{% include "global/partials/header.html" %}
+
+				<!-- Menu -->
+                    {% include "global/partials/menu.html" %}
+
+				<!-- Main -->
+                    {% block content %}{% endblock content %}
+			</div>
+
+		<!-- Scripts -->
+             <script src="{% static "global/js/script.js" %}"></script>
+             <script>
+                if (typeof navigator.serviceWorker !== 'undefined') {
+                    navigator.serviceWorker.register('{% static "global/js/sw.js" %}')
+                }
+            </script>
+			<script src="{% static "global/js/jquery.min.js" %}"></script>
+            <script src="{% static "global/js/browser.min.js" %}"></script>
+            <script src="{% static "global/js/breakpoints.min.js" %}"></script>
+            <script src="{% static "global/js/util.js" %}"></script>
+            <script src="{% static "global/js/main.js" %}"></script>
+
+	</body>
 </html>
